<resources>
    <string name="app_name">KiKiDemo</string>
    <string name="start_record">start record</string>
    <string name="stop_record">stop record</string>
    <string name="fan_control">Fan control</string>
    <string name="spi_led">SPI led</string>
    <string name="recording">recording</string>
    <string name="image_saved">Image saved</string>
    <string name="image_saved_error">Image saved error</string>
    <string name="video_saved">Video saved</string>
    <string name="video_saved_error">Video saved error</string>
    <string name="camera_fragment">Camera fragment</string>
    <string name="main_fragment">Main fragment</string>
</resources>