<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidUnknownAttribute -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.qytech.kikidemo.ui.main.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/tv_fan_control"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/fan_control"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:max="255"
            android:onProgressChanged="@{viewmodel.onProgressChanged}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_fan_control"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_start_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewmodel.onClick}"
            android:text="@string/start_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fan_control" />

        <Button
            android:id="@+id/btn_stop_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewmodel.onClick}"
            android:text="@string/stop_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_start_record" />

        <Button
            android:id="@+id/btn_spi_led"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewmodel.onClick}"
            android:text="@string/spi_led"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_stop_record" />


        <Button
            android:id="@+id/btn_navigation_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{viewmodel.onClick}"
            android:text="@string/camera_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_spi_led" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>